--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body,
+button,
+input,
+textarea {
+  font-family: "Geist", sans-serif;
+}
+
+code,
+pre {
+  font-family: "Geist Mono", monospace;
+}
